Fix inline focus ring paint invalidation on continuation change

An inline element's focus ring encloses its block and inline
continuations. The previous method handled invalidation of
display item client only, not rectangles covering the changed
inlines.

Now call setMayNeedPaintInvalidation() on the inline whose block
continuations are marked needsPaintOffsetAndVisualRectUpdate().

Also noticed a focus ring painting bug (crbug.com/703403) and added
a test case. Will fix later.

BUG=704243, 703403
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2765763002
Cr-Commit-Position: refs/heads/master@{#458895}

Former-commit-id: 437d0b9a1fbd7345b234e54e09716f501c37ccb8